[package]
name = "rust-test"
version = "0.1.0"
authors = ["maxmcd <max.t.mcdonnell@gmail.com>"]

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", rev="85ca3b9", features = ["v1_14"] }
gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
gstreamer-rtsp = { git = "https://github.com/sdroege/gstreamer-rs", rev="85ca3b9" }
gstreamer-app = { git = "https://github.com/sdroege/gstreamer-rs", rev="85ca3b9" }
gstreamer-rtsp-server = { git = "https://github.com/sdroege/gstreamer-rs", rev="85ca3b9" }
gstreamer-sdp = { git = "https://github.com/sdroege/gstreamer-rs", rev="85ca3b9" }
gstreamer-sdp-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
gstreamer-webrtc = { git = "https://github.com/sdroege/gstreamer-rs", rev="85ca3b9" }
gstreamer-webrtc-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
rand = "0.5"
serde_json = "1.0.19"
ws = "0.7.6"
env_logger = "0.5.10"
log = "0.4.1"

